--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "^10.1.0",
     "viem": "^2.36.0",
     "wagmi": "^2.16.9",
